--- a/fcartoonizer.ui
+++ b/fcartoonizer.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>668</width>
+    <height>439</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,21 +19,72 @@
   <property name="frameShadow">
    <enum>QFrame::Raised</enum>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
-   <item>
-    <widget class="QLabel" name="label">
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <widget class="QLineEdit" name="lineEdit"/>
+   </item>
+   <item row="0" column="1">
+    <widget class="QPushButton" name="pushButton">
+     <property name="maximumSize">
+      <size>
+       <width>33</width>
+       <height>16777215</height>
+      </size>
+     </property>
      <property name="text">
-      <string/>
+      <string>...</string>
      </property>
-     <property name="pixmap">
-      <pixmap resource="res.qrc">:/res/wip.png</pixmap>
+    </widget>
+   </item>
+   <item row="0" column="2">
+    <widget class="QCommandLinkButton" name="commandLinkButton">
+     <property name="maximumSize">
+      <size>
+       <width>99</width>
+       <height>16777215</height>
+      </size>
      </property>
-     <property name="scaledContents">
-      <bool>false</bool>
+     <property name="text">
+      <string>Cartoonify!</string>
      </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
+     <property name="icon">
+      <iconset resource="res.qrc">
+       <normaloff>:/res/cartoon.png</normaloff>:/res/cartoon.png</iconset>
      </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="3">
+    <widget class="QFrame" name="img">
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="pixmap">
+         <pixmap resource="res.qrc">:/res/delete2.png</pixmap>
+        </property>
+        <property name="scaledContents">
+         <bool>false</bool>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
