opencv text module

--- a/ftextrecognizer.ui
+++ b/ftextrecognizer.ui
@@ -80,7 +80,7 @@
          <bool>false</bool>
         </property>
         <property name="alignment">
-         <set>Qt::AlignCenter</set>
+         <set>Qt::AlignHCenter|Qt::AlignTop</set>
         </property>
        </widget>
       </item>
